# my_demo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
docs/superpowers/plans/: 2026-06-14-phase1-foundation-core-agent.md  2026-06-14-phase2-channel-dingtalk.md  2026-06-14-phase3-mcp-cron.md
docs/superpowers/specs/: 2026-06-14-multi-tenant-store-agent-design.md
src/: __init__.py  auth.py  checkpointer.py  custom_app.py  logging_config.py
src/agent/: graph.py  mcp_loader.py  skills.py  tools.py
src/api/: agents.py  auth_routes.py  channels.py  cron_callback.py  cron_jobs.py  deps.py  mcp.py  skills.py  tenants.py  webhooks.py
src/channels/: __init__.py  base.py  dingtalk.py  manager.py
src/db/: client.py
src/db/migrations/: 001_initial.sql  runner.py
src/models/: agent.py  channel.py  cron.py  mcp.py  skill.py  tenant.py
tests/: conftest.py
tests/integration/: conftest.py  test_agent_api.py  test_auth_api.py  test_channel_api.py  test_cron_api.py  test_cron_callback.py  test_db_client.py  test_dingtalk_webhook.py  test_mcp_api.py  test_migrations.py  test_skill_api.py  test_tenant_api.py
tests/unit/: test_auth.py  test_channel_base.py  test_channel_manager.py  test_channel_models.py  test_checkpointer.py  test_cron_models.py  test_dingtalk_channel.py  test_graph_factory.py  test_mcp_loader.py  test_mcp_models.py  test_models.py  test_skill_parser.py
