[project]
name = "store-agent-platform"
version = "0.1.0"
description = "Multi-tenant AI agent platform for retail store managers"
requires-python = ">=3.13"
dependencies = [
    "langgraph-api>=0.10.0",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-sdk>=0.4.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=0.3.0",
    "fastapi>=0.115.0",
    "pydantic>=2.13.0",
    "psycopg[binary,pool]>=3.2.0",
    "PyJWT>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "httpx>=0.28.0",
    "testcontainers[postgres]>=4.9.0",
]

[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests requiring DB",
    "e2e: end-to-end tests",
]
